--- a/deploy/exhort.yaml
+++ b/deploy/exhort.yaml
@@ -25,7 +25,12 @@ spec:
         image: quay.io/ecosystem-appeng/exhort:latest
         imagePullPolicy: IfNotPresent
         ports:
-        - containerPort: 8080
+        - name: http
+          containerPort: 8080
+          protocol: TCP
+        - name: management
+          containerPort: 9000
+          protocol: TCP
         resources:
           limits:
             memory: "128Mi"
@@ -36,10 +41,23 @@ spec:
             secretKeyRef:
               name: exhort-secret
               key: api-snyk-token
-        - name: API_TRUSTEDCONTENT_VEX_HOST
-          value: http://tc-vex-stub.trusted-content:8080
-        - name: API_TRUSTEDCONTENT_GAV_HOST
-          value: http://swio.trusted-content:8080
+        - name: API_TRUSTEDCONTENT_DISABLED
+          value: "true"
+        - name: TELEMETRY_DISABLED
+          value: "true"
+        livenessProbe:
+          httpGet:
+            path: /q/health/live
+            port: 9000
+          initialDelaySeconds: 1
+        readinessProbe:
+          httpGet:
+            path: /q/health/ready
+            port: 9000
+          initialDelaySeconds: 5
+          periodSeconds: 105
+          periodSeconds: 20
+        
 ---
 apiVersion: v1
 kind: Service
@@ -50,23 +68,13 @@ metadata:
   namespace: exhort
 spec:
   ports:
-  - name: web
+  - name: http
     port: 8080
     protocol: TCP
     targetPort: 8080
+  - name: management
+    port: 9000
+    protocol: TCP
+    targetPort: 9000
   selector:
     app: exhort
----
-apiVersion: route.openshift.io/v1
-kind: Route
-metadata:
-  labels:
-    app: exhort
-  name: dev
-  namespace: exhort
-spec:
-  port:
-    targetPort: 8080
-  to:
-    kind: Service
-    name: exhort
