--- a/deploy/exhort.yaml
+++ b/deploy/exhort.yaml
@@ -30,6 +30,11 @@ spec:
             memory: "128Mi"
             cpu: "500m"
         env:
+        - name: API_SNYK_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: exhort-secret
+              key: api-snyk-token
         - name: API_TRUSTEDCONTENT_DISABLED
           value: "true"
         - name: TELEMETRY_DISABLED
