--- a/.tekton/exhort-pull-request.yaml
+++ b/.tekton/exhort-pull-request.yaml
@@ -222,9 +222,9 @@ spec:
       taskRef:
         params:
         - name: name
-          value: buildah
+          value: buildah-8gb
         - name: bundle
-          value: quay.io/redhat-appstudio-tekton-catalog/task-buildah:0.1@sha256:487b82bbdbd361d6ef3cd7a522bb6fe2f163a2d517181f13fe07565a4838f1bb
+          value: quay.io/redhat-appstudio-tekton-catalog/task-buildah-8gb@sha256:df0bbc9706c44bd65af60af7e3466a27ad5f9a8d44e17c26e176a4ec529a891e
         - name: kind
           value: task
         resolver: bundles
