update deployment imageName
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/deploy/exhort.yaml
+++ b/deploy/exhort.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: exhort
-        image: quay.io/ecosystem-appeng/exhort:latest
+        image: exhort:latest
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
