--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ api.snyk.host=https://app.snyk.io/api/v1
 # api.snyk.timeout=10s
 # api.snyk.disabled=true
 api.ossindex.host=https://ossindex.sonatype.org/api/v3
+api.trustification.host=https://exhort.staging.trustification.dev/api/v1
 
 report.snyk.issue.regex=https://security.snyk.io/vuln/%s?utm_medium=Partner&utm_source=RedHat&utm_campaign=Code-Ready-Analytics-2020&utm_content=vuln/%s
 report.trustedContent.link=https://maven.repository.redhat.com/ga/
@@ -36,4 +37,3 @@ quarkus.index-dependency.spdx-jackson.artifact-id=spdx-jackson-store
 quarkus.index-dependency.spdx-java.group-id=org.spdx
 quarkus.index-dependency.spdx-java.artifact-id=java-spdx-library
 quarkus.camel.native.reflection.include-patterns=org.cyclonedx.model.*,com.redhat.exhort.api.*,org.spdx.jacksonstore.*,org.spdx.storage.listedlicense.*
-# quarkus.jackson.serialization-inclusion=non-empty
