--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 api.onguard.host=http://onguard:8080/
 api.onguard.management.host=http://onguard:9000/
 
+api.tpa.host=http://trust.rhcloud.com/api/v2/
+api.tpa.management.host=https://trust.rhcloud.com/api/v2/
+
 api.ossindex.host=https://ossindex.sonatype.org/api/v3
 
 report.snyk.issue.regex=https://security.snyk.io/vuln/__ISSUE_ID__
