--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 #quarkus.log.level=DEBUG
 quarkus.log.category."com.github.tomakehurst".level=DEBUG
 telemetry.disabled=true
+api.tpa.disabled=false
+api.ossindex.disabled=false
+api.snyk.disabled=false
