--- a/.tekton/exhort-pull-request.yaml
+++ b/.tekton/exhort-pull-request.yaml
@@ -8,7 +8,7 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" && ( ".tekton/exhort-pull-request.yaml".pathChanged() || "ui/*".pathChanged() || "src/*".pathChanged() || "api-spec/*".pathChanged() || "pom.xml".pathChanged() ) && !( event_title.contains("[skip ci]") || event_title.contains("[ci skip]") )
+    pipelinesascode.tekton.dev/on-cel-expression: event == "pull_request" && target_branch == "main" && ( !( event_title.contains("[skip ci]") || event_title.contains("[ci skip]") ))
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: exhort
