--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,6 @@ trustedcontent.recommendation.ubi.mapping.fedora=${trustedcontent.recommendation
 trustedcontent.recommendation.ubi.mapping.amazonlinux=${trustedcontent.recommendation.ubi.purl.ubi9}
 
 %prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
+
+# S3 bucket configuration
+s3.bucket.name=${S3_BUCKET_NAME:rhda-ai-model-cards-poc}
