feat: add tpa client authentication (#409)
* feat: add tpa client authentication

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: allow disable tpa auth

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* chore: update deployment files

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,14 @@ api.snyk.host=https://app.snyk.io/api/v1
 
 api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 
-api.tpa.host=http://trust.rhcloud.com/api/v2/
+api.tpa.host=${TPA_HOST}
 api.tpa.management.host=https://trust.rhcloud.com/api/v2/
+
+# OIDC TPA Client Configuration
+quarkus.oidc-client.tpa.auth-server-url=${TPA_AUTH_SERVER_URL}
+quarkus.oidc-client.tpa.client-id=${TPA_CLIENT_ID}
+quarkus.oidc-client.tpa.credentials.secret=${TPA_CLIENT_SECRET}
+quarkus.oidc-client.tpa.grant.type=client
 
 api.ossindex.host=https://ossindex.sonatype.org/api/v3
 
