--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,4 @@ quarkus.log.category."com.github.tomakehurst".level=DEBUG
 telemetry.disabled=true
 api.ossindex.disabled=false
 api.snyk.disabled=false
+quarkus.oidc-client.tpa.enabled=false
