--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,6 @@
     <!-- Dependencies -->
     <exhort-api.version>1.0.5</exhort-api.version>
     <sentry.version>7.8.0</sentry.version>
-    <cyclonedx.version>9.0.4</cyclonedx.version>
     <spdx.version>1.1.9.1</spdx.version>
     <htmlunit.version>4.11.1</htmlunit.version>
     <wiremock.version>3.4.2</wiremock.version>
@@ -185,11 +184,14 @@
     <dependency>
       <groupId>org.apache.camel.quarkus</groupId>
       <artifactId>camel-quarkus-log</artifactId>
+    </dependency>    
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-oidc-client</artifactId>
     </dependency>
     <dependency>
       <groupId>org.cyclonedx</groupId>
       <artifactId>cyclonedx-core-java</artifactId>
-      <version>${cyclonedx.version}</version>
     </dependency>
     <dependency>
       <groupId>org.spdx</groupId>
