--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,4 +57,4 @@ trustedcontent.recommendation.ubi.mapping.amazonlinux=${trustedcontent.recommend
 %prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
 
 # S3 bucket configuration
-s3.bucket.name=${S3_BUCKET_NAME:rhda-ai-model-cards-poc}
+s3.bucket.name=${S3_BUCKET_NAME:rhda-poc-ai-model-cards}
