fix: timeout cannot be parsed (#410)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ api.snyk.host=https://app.snyk.io/api/v1
 
 api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 
-api.tpa.host=${TPA_HOST}
+api.tpa.host=${TPA_HOST:https://trust.rhcloud.com/api/v2/}
 api.tpa.management.host=https://trust.rhcloud.com/api/v2/
 
 # OIDC TPA Client Configuration
