fix: empty status caused NPE (#416)
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,4 @@ trustedcontent.recommendation.ubi.mapping.fedora=${trustedcontent.recommendation
 trustedcontent.recommendation.ubi.mapping.amazonlinux=${trustedcontent.recommendation.ubi.purl.ubi9}
 
 %prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
+%dev.quarkus.keycloak.devservices.enabled=false
