feat: support cyclonedx 1.6
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ telemetry.disabled=true
 api.ossindex.disabled=false
 api.snyk.disabled=false
 quarkus.oidc-client.tpa.enabled=false
+quarkus.hibernate-orm.persistence-xml.ignore=true
