--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,14 @@
 #quarkus.log.level=DEBUG
-quarkus.log.category."com.github.tomakehurst".level=DEBUG
+#quarkus.log.category."com.github.tomakehurst".level=DEBUG
 telemetry.disabled=true
 api.ossindex.disabled=false
 api.snyk.disabled=false
 quarkus.oidc-client.tpa.enabled=false
 quarkus.hibernate-orm.persistence-xml.ignore=true
+quarkus.keycloak.devservices.enabled=false
+quarkus.datasource.devservices.enabled=false
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.flyway.enabled=false
+quarkus.hibernate-orm.sql-load-script=db/h2/V2__insert_sample_data.sql
