--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,3 +56,21 @@ trustedcontent.recommendation.ubi.mapping.amazonlinux=${trustedcontent.recommend
 
 %prod.quarkus.redis.hosts=redis://${db.redis.host:localhost}:${db.redis.port:6379}/
 %dev.quarkus.keycloak.devservices.enabled=false
+
+# Configure your datasource
+quarkus.datasource.db-kind=postgresql
+
+# Flyway configuration
+quarkus.flyway.migrate-at-start=true
+quarkus.flyway.locations=classpath:db/migration
+%dev.quarkus.flyway.locations=classpath:db/migration,classpath:db/examples
+quarkus.flyway.baseline-on-migrate=true
+quarkus.flyway.baseline-version=0
+
+# Disable Hibernate schema generation (let Flyway handle it)
+quarkus.hibernate-orm.database.generation=none
+
+# Production database configuration
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_POSTGRES_HOST}:${DB_POSTGRES_PORT}/${DB_POSTGRES_DATABASE}?sslmode=${DB_POSTGRES_SSL_MODE}
+%prod.quarkus.datasource.username=${DB_POSTGRES_USER}
+%prod.quarkus.datasource.password=${DB_POSTGRES_PASSWORD}
