--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,6 +71,6 @@ quarkus.flyway.baseline-version=0
 quarkus.hibernate-orm.database.generation=none
 
 # Production database configuration
-%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${DB_POSTGRES_HOST}:${DB_POSTGRES_PORT}/${DB_POSTGRES_DATABASE}?sslmode=${DB_POSTGRES_SSL_MODE}
-%prod.quarkus.datasource.username=${DB_POSTGRES_USER}
-%prod.quarkus.datasource.password=${DB_POSTGRES_PASSWORD}
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${db.postgres.host}:${db.postgres.port}/${db.postgres.database}?sslmode=${db.postgres.sslmode}
+%prod.quarkus.datasource.username=${db.postgres.user}
+%prod.quarkus.datasource.password=${db.postgres.password}
