--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,6 +3,7 @@
 telemetry.disabled=true
 api.ossindex.disabled=false
 api.snyk.disabled=false
+api.tpa.disabled=false
 quarkus.oidc-client.tpa.enabled=false
 quarkus.hibernate-orm.persistence-xml.ignore=true
 quarkus.keycloak.devservices.enabled=false
