--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,10 @@ api.snyk.token=placeholder
 api.snyk.host=https://app.snyk.io/api/v1
 # api.snyk.timeout=10s
 # api.snyk.disabled=true
-
 api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
+
+api.onguard.host=http://onguard:8080/
+api.onguard.management.host=http://onguard:9000/
 
 api.tpa.host=${TPA_HOST:https://trust.rhcloud.com/api/v2/}
 api.tpa.management.host=https://trust.rhcloud.com/api/v2/
