--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,7 +4,6 @@ telemetry.disabled=true
 api.ossindex.disabled=false
 api.snyk.disabled=false
 api.tpa.disabled=false
-quarkus.oidc-client.tpa.enabled=false
 quarkus.hibernate-orm.persistence-xml.ignore=true
 quarkus.keycloak.devservices.enabled=false
 quarkus.datasource.devservices.enabled=false
@@ -13,3 +12,9 @@ quarkus.datasource.jdbc.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.flyway.enabled=false
 quarkus.hibernate-orm.sql-load-script=db/h2/V2__insert_data.sql
+
+# TPA OIDC Client Configuration for testing
+quarkus.oidc-client.tpa.auth-server-url=${keycloak.url}/realms/tpa
+quarkus.oidc-client.tpa.client-id=test-tpa-client
+quarkus.oidc-client.tpa.credentials.secret=test-tpa-secret
+quarkus.oidc-client.tpa.grant.type=client
