--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.redhat.ecosystemappeng</groupId>
   <artifactId>exhort</artifactId>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.6.2</version>
   <name>RHDA - Exhort</name>
   <licenses>
     <license>
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:git@github.com:trustification/exhort.git</connection>
     <developerConnection>scm:git:git@github.com:trustification/exhort.git</developerConnection>
-    <tag>v1.6.0</tag>
+    <tag>v1.6.2</tag>
     <url>https://github.com/trustification/exhort</url>
   </scm>
   <issueManagement>
