--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,14 @@ api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 api.onguard.host=http://onguard:8080/
 api.onguard.management.host=http://onguard:9000/
 
-api.tpa.host=${TPA_HOST:https://trust.rhcloud.com/api/v2/}
-api.tpa.management.host=https://trust.rhcloud.com/api/v2/
+api.trustify.host=${TRUSTIFY_HOST:https://trust.rhcloud.com/api/v2/}
+api.trustify.management.host=https://trust.rhcloud.com/api/v2/
 
-# OIDC TPA Client Configuration
-quarkus.oidc-client.tpa.auth-server-url=${TPA_AUTH_SERVER_URL}
-quarkus.oidc-client.tpa.client-id=${TPA_CLIENT_ID}
-quarkus.oidc-client.tpa.credentials.secret=${TPA_CLIENT_SECRET}
-quarkus.oidc-client.tpa.grant.type=client
+# OIDC Trustify Client Configuration
+quarkus.oidc-client.trustify.auth-server-url=${TRUSTIFY_AUTH_SERVER_URL}
+quarkus.oidc-client.trustify.client-id=${TRUSTIFY_CLIENT_ID}
+quarkus.oidc-client.trustify.credentials.secret=${TRUSTIFY_CLIENT_SECRET}
+quarkus.oidc-client.trustify.grant.type=client
 
 report.nvd.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
 report.cve.issue.regex=https://cve.mitre.org/cgi-bin/cvename.cgi?name=__ISSUE_ID__
