--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,7 @@
 #quarkus.log.level=DEBUG
 #quarkus.log.category."com.github.tomakehurst".level=DEBUG
 telemetry.disabled=true
-api.tpa.disabled=false
+api.trustify.disabled=false
 quarkus.hibernate-orm.persistence-xml.ignore=true
 quarkus.keycloak.devservices.enabled=false
 quarkus.datasource.devservices.enabled=false
@@ -11,8 +11,8 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.flyway.enabled=false
 quarkus.hibernate-orm.sql-load-script=db/h2/V2__insert_data.sql
 
-# TPA OIDC Client Configuration for testing
-quarkus.oidc-client.tpa.auth-server-url=${keycloak.url}/realms/tpa
-quarkus.oidc-client.tpa.client-id=test-tpa-client
-quarkus.oidc-client.tpa.credentials.secret=test-tpa-secret
-quarkus.oidc-client.tpa.grant.type=client
+# Trustify OIDC Client Configuration for testing
+quarkus.oidc-client.trustify.auth-server-url=${keycloak.url}/realms/trustify
+quarkus.oidc-client.trustify.client-id=test-trustify-client
+quarkus.oidc-client.trustify.credentials.secret=test-trustify-secret
+quarkus.oidc-client.trustify.grant.type=client
