--- a/devfile.yaml
+++ b/devfile.yaml
@@ -10,7 +10,7 @@ metadata:
   description: Exhort
   tags:
     - Exhort
-    - RHTPA
+    - Dependency Analytics
     - Java
     - Quarkus
     - Camel
