feat: multitenant trustify (#496)
* feat: multitenant trustify

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: update prometheus monitored routes

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

* feat: expose multitenant metrics

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

---------

Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,14 +11,11 @@ api.trustedcontent.host=https://exhort.trust.rhcloud.com/api/v1/
 api.onguard.host=http://onguard:8080/
 api.onguard.management.host=http://onguard:9000/
 
-api.trustify.host=${TRUSTIFY_HOST:https://trust.rhcloud.com/api/v2/}
-api.trustify.management.host=https://trust.rhcloud.com/api/v2/
-
-# OIDC Trustify Client Configuration
-quarkus.oidc-client.trustify.auth-server-url=${TRUSTIFY_AUTH_SERVER_URL}
-quarkus.oidc-client.trustify.client-id=${TRUSTIFY_CLIENT_ID}
-quarkus.oidc-client.trustify.credentials.secret=${TRUSTIFY_CLIENT_SECRET}
-quarkus.oidc-client.trustify.grant.type=client
+# Trustify Provider Configuration
+# providers.trustify.host=${TRUSTIFY_HOST:https://trust.rhcloud.com/api/v2/}
+# providers.trustify.auth.server-url=${TRUSTIFY_AUTH_SERVER_URL}
+# providers.trustify.auth.client-id=${TRUSTIFY_CLIENT_ID}
+# providers.trustify.auth.client-secret=${TRUSTIFY_CLIENT_SECRET}
 
 report.nvd.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
 report.cve.issue.regex=https://cve.mitre.org/cgi-bin/cvename.cgi?name=__ISSUE_ID__
@@ -62,7 +59,7 @@ quarkus.flyway.baseline-on-migrate=true
 quarkus.flyway.baseline-version=0
 
 # Disable Hibernate schema generation (let Flyway handle it)
-quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.sql-load-script=no-file
 
 # Production database configuration
 %prod.quarkus.datasource.jdbc.url=jdbc:postgresql://${db.postgres.host}:${db.postgres.port}/${db.postgres.database}?sslmode=${db.postgres.sslmode}
