--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,7 +12,6 @@ quarkus.flyway.enabled=false
 quarkus.hibernate-orm.sql-load-script=db/h2/V2__insert_data.sql
 
 # Trustify OIDC Client Configuration for testing
-quarkus.oidc-client.trustify.auth-server-url=${keycloak.url}/realms/trustify
-quarkus.oidc-client.trustify.client-id=test-trustify-client
-quarkus.oidc-client.trustify.credentials.secret=test-trustify-secret
-quarkus.oidc-client.trustify.grant.type=client
+provider.trustify.auth.server-url=${keycloak.url}/realms/trustify
+provider.trustify.auth.client-id=test-trustify-client
+provider.trustify.auth.client-secret=test-trustify-secret
