--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,10 @@ api.onguard.host=http://onguard:8080/
 api.onguard.management.host=http://onguard:9000/
 
 # Trustify Provider Configuration
-# providers.trustify.host=${TRUSTIFY_HOST:https://trust.rhcloud.com/api/v2/}
-# providers.trustify.auth.server-url=${TRUSTIFY_AUTH_SERVER_URL}
-# providers.trustify.auth.client-id=${TRUSTIFY_CLIENT_ID}
-# providers.trustify.auth.client-secret=${TRUSTIFY_CLIENT_SECRET}
+# provider.trustify.host=${TRUSTIFY_HOST:https://trust.rhcloud.com/api/v2/}
+# provider.trustify.auth.server-url=${TRUSTIFY_AUTH_SERVER_URL}
+# provider.trustify.auth.client-id=${TRUSTIFY_CLIENT_ID}
+# provider.trustify.auth.client-secret=${TRUSTIFY_CLIENT_SECRET}
 
 report.nvd.issue.regex=https://nvd.nist.gov/vuln/detail/__ISSUE_ID__
 report.cve.issue.regex=https://cve.mitre.org/cgi-bin/cvename.cgi?name=__ISSUE_ID__
